@@ -39,7 +39,7 @@
     checkbox-width: 40px;
     error-max: 20rem;
     field-max: 20rem;
-    field-min: 10rem;
+    field-min: 12rem;
 }
 form.classic {
     background: #colours[panel-bg]; border-radius: 5px;
@@ -55,7 +55,7 @@ form.classic {
         font-size: 0.8rem; padding: 0.5rem 0 0;
     }
     .form-wrapper {
-        border-collapse: separate; border-spacing: 0 0.25rem;
+        border-collapse: separate; border-spacing: 0 0.5rem;
         border-radius: 5px; padding: 0 1rem;
         .form-title {
             color: #colours[text]; font-family: #fonts[system];
@@ -90,7 +90,7 @@ form.classic {
         content: '';
     }
     span.field-label {
-        border: 2px solid transparent; padding: 2px 0.25rem;
+        border: 2px solid transparent; left: 0.5rem; padding: 2px 0.25rem;
         position: absolute; top: 24px; transition: top 0.5s;
     }
     .input-field:has(input:focus) span.field-label {
@@ -106,10 +106,18 @@ form.classic {
     }
     .input-field:has(span.field-label) {
         input {
-            max-width: unset; outline: 0;
+            height: 1.75rem; max-width: unset; outline: 0;
         }
-        input:focus {
-            border-top-left-radius: 0;
+        input[type=password], input[type=text]:not(.digit) {
+            border-radius: 50px; padding-left: 0.75rem;
+        }
+        input.digit:first-child {
+            border-bottom-left-radius: 50px;
+            border-top-left-radius: 50px;
+        }
+        input.digit:last-child {
+            border-bottom-right-radius: 50px;
+            border-top-right-radius: 50px;
         }
     }
     .input-field:has(span.field-label)::before {
@@ -134,6 +142,9 @@ form.classic {
         input[type=text], select.select-multiple option {
             padding: 0 0.25rem;
         }
+        select.select-multiple option {
+            min-width: 8rem;
+        }
         input[type=submit] {
             font-family: #fonts[system]; font-size: 0.8rem;
         }
@@ -157,7 +168,7 @@ form.classic {
         }
     }
     .input-field.hide {
-        display: none;
+        display: none !important;
     }
     .input-boolean {
         .checkbox-wrapper {
@@ -213,12 +224,24 @@ form.classic {
             max-width: 13rem;
         }
     }
+    .input-immutable {
+        h1 {
+            margin: 1rem 0;
+        }
+        p, pre code {
+            max-width: 50rem;
+        }
+        pre code {
+            display: inline-block;
+            white-space: break-spaces;
+        }
+    }
     .input-integer {
         .digit {
             border-left: none; border-radius: 0; border-right: none;
-            outline: 0; width: 3ch;
+            outline: 0; text-align: center; width: 2rem;
         }
-        .digit.first {
+        .digit:first-child {
             border-left: 2px inset #colours[button-border];
             border-bottom-left-radius: 5px; border-top-left-radius: 5px;
         }
@@ -226,6 +249,9 @@ form.classic {
             border-right: 2px inset #colours[button-border];
             border-bottom-right-radius: 5px; border-top-right-radius: 5px;
         }
+    }
+    .input-password .reveal {
+        position: absolute; right: 0.25rem; top: 0.125rem;
     }
     .input-select option {
         font-family: #fonts[data];
@@ -319,4 +345,7 @@ form.classic {
     .alert-severe .card {
         background: #colours[error-bg]; border-radius: 5px;
     }
+}
+.selector form.classic {
+    box-shadow: none;
 }
